# minerva

./: .gitignore  CHANGELOG.md  PROJECT_OVERVIEW_2.md  README.md  TRANSIENT_CHANGELOG  dev-start.py  package-lock.json  package.json  project_overview.md  pyproject.toml  requirements.txt  rework.md  start-minerva.ps1  start-minerva.sh
backend/: .coveragerc  .flake8  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  test_extraction_logging.py
backend/docs/: CHANGELOG.md  CHANGELOG_DEPENDENCY_INJECTION_FIXES.md  CONCEPT_EXTRACTION_ENHANCEMENT_PLAN.md  INDEX.md  README.md  conf.py
backend/docs/ai-assistant/: code-patterns.md  quick-reference.md
backend/docs/api/: endpoints.md  error-codes.md
backend/docs/architecture/: database-schema.md  dependency-injection.md  overview.md  processing-pipeline.md
backend/docs/development/: coverage-reporting.md  onboarding.md  setup.md  testing.md
backend/docs/features/: concept-extraction.md  concept-relations.md  entity-uuid-handling.md  field-comparison.md  frontmatter-constants.md  temporal-serialization.md
backend/docs/quick-reference/: decision-trees.md
backend/docs/troubleshooting/: index.md
backend/minerva_agent/: .env.example  README.md  langgraph.json  pyproject.toml
backend/minerva_agent/src/minerva_agent/: __init__.py  agent.py
backend/minerva_agent/src/minerva_agent/tools/: __init__.py  _vault.py  get_workflow_status.py  glob.py  grep.py  list_dir.py  read_file.py  start_workflows.py
backend/scripts/: extract_journal_scores.ipynb  extract_journal_scores.py  generate_docs.py  quality_check.py
backend/src/: debug.py
backend/src/minerva_backend/: config.py  containers.py
backend/src/minerva_backend/api/: dependencies.py  exceptions.py  main.py  models.py
backend/src/minerva_backend/api/routers/: curation.py  health.py  journal.py  pipeline.py  processing.py
backend/src/minerva_backend/graph/: db.py  model.py
backend/src/minerva_backend/graph/models/: base.py  documents.py  entities.py  enums.py  relations.py
backend/src/minerva_backend/graph/repositories/: __init__.py  base.py  concept_repository.py  consumable_repository.py  content_repository.py  emotion_repository.py  event_repository.py  feeling_concept_repository.py  feeling_emotion_repository.py  feeling_repository.py  journal_entry_repository.py  person_repository.py  place_repository.py  project_repository.py  quote_repository.py  relation_repository.py  resource_repository.py  temporal_repository.py
backend/src/minerva_backend/graph/services/: knowledge_graph_service.py  lexical_utils.py
backend/src/minerva_backend/obsidian/: frontmatter_constants.py  obsidian_service.py
backend/src/minerva_backend/processing/: concept_extraction_workflow.py  curation_manager.py  extraction_service.py  inbox_classification_workflow.py  inbox_models.py  llm_service.py  models.py  ollama_client.py  pipeline.py  quote_parsing_workflow.py  temporal_converter.py  temporal_orchestrator.py
backend/src/minerva_backend/processing/extraction/: README.md  context.py  orchestrator.py  relationship_processor.py
backend/src/minerva_backend/processing/extraction/processors/: __init__.py  base.py  concept_feeling_processor.py  concept_processor.py  concept_relation_processor.py  emotion_processor.py  factory.py  generic_entity_processor.py  people_processor.py
backend/src/minerva_backend/processing/extraction/services/: __init__.py  span_processing_service.py
backend/src/minerva_backend/prompt/: base.py  extract_concept_feelings.py  extract_concept_relations.py  extract_concepts.py  extract_consumables.py  extract_content.py  extract_emotions.py  extract_events.py  extract_people.py  extract_places.py  extract_projects.py  extract_relationships.py  generate_zettel_summary.py  hydrate_person.py  hydrate_relationship.py  merge_concept.py  merge_summaries.py
backend/src/minerva_backend/utils/: diary.py  logging.py  validators.py
backend/test_scripts/: test_submit_journal.py
backend/test_scripts/notes/: 2025-09-08.md  2025-09-09.md  2025-09-10.md  2025-09-11.md  2025-09-12.md
backend/tests/: Makefile  __init__.py  conftest.py  pytest.ini  run_tests.py  test_api.py  test_graph.py
backend/tests/api/: curation.db  test_curation.py
backend/tests/fixtures/: __init__.py  entity_factory.py  journal_factory.py
backend/tests/graph/: test_kg_service.py  test_relation_repository.py  test_repositories.py
backend/tests/obsidian/: test_obsidian_service.py
backend/tests/processing/: test_curation_manager.py  test_extraction_service.py  test_temporal_orchestrator.py
backend/tests/unit/api/: __init__.py  test_curation.py  test_health.py  test_journal.py  test_pipeline.py  test_processing.py
backend/tests/unit/graph/: test_base_repository_vector.py  test_concept_relations.py  test_concept_repository.py  test_concept_repository_relations.py  test_documents.py  test_lexical_utils.py
backend/tests/unit/obsidian/: test_obsidian_concept_relations.py  test_obsidian_service.py
backend/tests/unit/processing/: test_concept_feeling_processor.py  test_concept_processor.py  test_concept_processor_enhanced_context.py  test_concept_relation_processor.py  test_curation_manager.py  test_extraction_service.py  test_list_serialization.py  test_llm_service.py  test_relationship_processor.py  test_temporal_converter.py  test_temporal_orchestrator.py
backend/tests/unit/prompt/: test_merge_concept.py
backend/tests/utils/: __init__.py  database.py  ollama.py
backend/zettel/: .env.example  CHANGELOG.md  README.md  langgraph.json  pyproject.toml
backend/zettel/docs/: API.md  ARCHITECTURE.md  CONCEPT_EXTRACTION_DESIGN.md  DEVELOPER.md  README.md  WORKFLOWS.md
backend/zettel/src/zettel_agent/: CONCEPT_EXTRACTION_DESIGN.md  __init__.py  concept_extraction_graph.py  db.py  obsidian_utils.py  quote_parse_graph.py  test.py  web_search_utils.py
bak/: commentary.py  config.py  enriquecer_diario.py  file_utils.py  (+12 more)
minerva-models/: README.md  pyproject.toml
minerva-models/src/minerva_models/: __init__.py  base.py  documents.py  entities.py  relations.py  utils.py
(+82 files in other folders)
