[project]
name = "minerva"
version = "0.1.0"
description = ""
authors = [
    { name = "aelgier", email = "alexander.elgier@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "temporalio (>=1.17.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "dependency-injector[pydantic2] (>=4.48.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
