[project]
name = "minerva"
version = "0.1.0"
description = ""
authors = [
    { name = "aelgier", email = "alexander.elgier@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "temporalio (>=1.17.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "dependency-injector[pydantic2] (>=4.48.1,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "intervaltree (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
