[tool.poetry]
name = "minerva-workspace"
version = "0.3.0"
description = "Minerva workspace - managing backend and zettel projects"
authors = ["aelgier <alexander.elgier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

# Backend project dependencies
minerva-backend = {path = "./backend", develop = true}

# Zettel project dependencies  
# agent = {path = "./backend/zettel", develop = true}

# Shared dependencies
aiosqlite = ">=0.21.0,<0.22.0"
temporalio = ">=1.17.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
dependency-injector = {extras = ["pydantic2"], version = ">=4.48.1,<5.0.0"}
pydantic-settings = ">=2.10.1,<3.0.0"
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.11.9,<3.0.0"
diskcache = ">=5.6.3,<6.0.0"
pyyaml = ">=6.0.2,<7.0.0"
stanza = ">=1.10.1,<2.0.0"
intervaltree = ">=3.1.0,<4.0.0"
pytest = ">=8.4.2,<9.0.0"
rapidfuzz = ">=3.14.1,<4.0.0"
langgraph-cli = {extras = ["inmem"], version = ">=0.4.4,<0.5.0"}
langgraph = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
# Development tools
pytest-cov = "^4.0"
black = "^24.0"
isort = "^6.0"
flake8 = "^7.0"
radon = "^6.0"
vulture = "^2.10"
mypy = "^1.8"
sphinx = "^7.0"
mkdocs = "^1.5"
mkdocs-material = "^9.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
