[tool.poetry]
name = "minerva-models"
version = "0.4.0"
description = "Shared Pydantic models for Minerva knowledge graph"
authors = ["aelgier <alexander.elgier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "minerva_models", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = ">=2.11.9,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

