[tool.poetry]
name = "minerva-agent"
version = "0.0.1"
description = "Deep agent for Obsidian vault assistance"
authors = ["Alex <alexander.elgier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "minerva_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langgraph = ">=1.0.0"
langchain = ">=1.0.0"
langchain-google-genai = "^3.0.0"
deepagents = "*"
python-dotenv = ">=1.0.1"
langgraph-api = ">=0.5.0"
langgraph-cli = {version = "*", extras = ["inmem"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

