[tool.poetry]
name = "minerva-agent"
version = "0.1.0"
description = "Deep agent for Obsidian vault assistance"
authors = ["Alex <alexander.elgier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "minerva_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langgraph = ">=1.0.3"
langchain = ">=1.0.7"
langchain-google-genai = ">=3.0.3"
deepagents = ">=0.2.7"
python-dotenv = ">=1.0.1"
langgraph-api = ">=0.5.14"
langgraph-cli = {version = "*", extras = ["inmem"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

