[tool.poetry]
name = "zettel_agent"
version = "0.4.0"
description = "Agent for handling Zettels."
authors = ["Alex <1231241231@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "zettel_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langgraph = ">=1.0.0"
langchain = ">=1.0.0"
python-dotenv = ">=1.0.1"
aiofiles = ">=23.2.1"
langgraph-api = ">=0.5.0"
langgraph-cli = {version = "*", extras = ["inmem"]}
minerva-models = {path = "../../minerva-models", develop = true}
langchain-ollama = "^1.0.0"
langchain-google-genai = "^3.0.0"
langchain-neo4j = "^0.6.0"
neo4j-graphrag = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
